# NekoTune

./: .gitignore  CacheReplanning.md  README.md  build.bat  build.ps1  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  artist_debug.json  artist_response.json  scratch_artist.cjs  search_miku.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cache.rs  download.rs  lib.rs  local.rs  login.rs  main.rs  proxy.rs  ytdlp.rs
src-tauri/src/api/: innertube.rs  mod.rs
src/hooks/: useCachedImage.ts  useInnertube.ts  useKeyboard.ts  useLyrics.ts  usePersistedState.ts  usePlayer.ts  usePrefetch.ts  useQueue.ts  useScrollPersistence.ts  useSearch.ts  useSettingsEffects.ts
src/i18n/: index.ts
src/pages/: AlbumPage.tsx  ArtistPage.tsx  BrowsePage.tsx  ExplorePage.tsx  FavoritesPage.tsx  HistoryPage.tsx  HomePage.tsx  LibraryPage.tsx  LyricsPage.tsx  PlaylistPage.tsx  PlaylistsPage.tsx  QueuePage.tsx  SearchPage.tsx  SettingsPage.tsx
src/services/: api.ts  audioCache.ts  cache.ts  cacheInvalidation.ts  download.ts  imageCacheService.ts  innertube.ts  listBuffer.ts  local.ts  lyrics.ts  player.ts  proxy.ts  streamCache.ts
src/stores/: accountStore.ts  downloadStore.ts  libraryStore.ts  localStore.ts  playerStore.ts  playlistStore.ts  settingsStore.ts  themeStore.ts  uiStore.ts
src/types/: account.ts  index.ts  music.ts  player.ts  settings.ts
src/utils/: constants.ts  debounce.ts  format.ts  playerPersist.ts  songCache.ts  (+1 more)
(+54 files in other folders)
