[package]
name = "nekotune"
version = "0.1.0"
description = "A desktop YouTube Music wrapper"
authors = ["NekoTune"]
edition = "2021"

[lib]
name = "nekotune_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
percent-encoding = "2"
yt-dlp = { version = "2", default-features = false, features = ["rustls"] }
lofty = "0.21"
walkdir = "2"
dirs-next = "2"
